style: fix the scrollbar track and search backgrounds in dark mode to get rid of green

--- a/docs/app/global.css
+++ b/docs/app/global.css
@@ -144,8 +144,8 @@
   --sidebar-ring: oklch(0.65 0.15 285);
   --sidebar-separator: oklch(0.6119 0.0089 286.13);
   --scrollbar-color: oklch(1 0 0 / 30.2%);
-  --scrollbar-track: #182326;
-  --glass-background: #182326; 
+  --scrollbar-track: #292D2F;
+  --glass-background: rgba(255, 255, 255, 0.1); 
   --icon: oklch(1 0 0);
 }
 
